# gn-standalone

./: .gitmodules  README.md
src/: .gn  BUILD.gn
src/base/: BUILD.gn
src/base/allocator/: BUILD.gn
src/base/test/: BUILD.gn
src/buildtools/: .gitignore
src/buildtools/linux64/: gn
src/buildtools/mac/: gn
src/projects/: BUILD.gn
src/projects/example_app/src/: BUILD.gn  example_lib.cc  example_shlib.cc  main.cc
src/projects/example_app/src/include/: example_lib.h  example_shlib.h
src/projects/example_app/src/tests/: shared_lib_add_unittest.cc  static_lib_add_unittest.cc
src/testing/: test.gni
src/tools/gn/: last_commit_position.py
tools/: .gitignore  download  download.bat  download.py  download_android_tools.tasks  download_binutils.tasks  download_clang.tasks  download_clang_format.tasks  download_from_google_storage.bat  download_gn.tasks  download_libcxx_and_abi.tasks  download_win_toolchain.tasks  lastchange.tasks  update_LASTCHANGE  update_LASTCHANGE.bat
